--- a/src/Shoes.css
+++ b/src/Shoes.css
@@ -21,22 +21,18 @@
     font-size: 16px;
 }
 
+.Shoes-image{
+    margin-right:30px;
+}
+
 .Shoes-image img{
     width: 500px;
     height: 350px;
 }
 
-@media screen and (min-width:320px) and (max-width:667px){
-    .Shoes-image{
-        width: 100%;
-    }
-}
-
-
 .Shoes-body{
-    
     margin-top:5%;
-    margin-left:15%;
+    margin-left:20%;
 }
 
 .row{
@@ -46,11 +42,10 @@
     flex-wrap: wrap;
 }
 
-
+/* 
 .Shoes-content{
-    padding-left:30px;
-    padding-right: 30px;
-}
+
+} */
 
 .Shoes-title p{
     font-size: 16px;
